--- a/css/styles.css
+++ b/css/styles.css
@@ -7,44 +7,107 @@
   box-sizing: border-box;
 }
 
+html {
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+}
+
 body {
   background-color: #000;
   color: #fff;
   max-width: 400px;
+  margin: 0 auto;
 }
 
 .header {
+  width: 100%;
+  margin-bottom: 1em;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  background-color: #f0f;
-  width: 100%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-.header-nav-item {
-  height: 30px;
-  width: 15%;
+.header__form {
+  width: 90%;
 }
 
-.header a {
+.header__item {
+  margin: 0.5em;
+}
+
+.header__item--menu {
   color: #fff;
   text-decoration: none;
 }
 
-.header-form-item {
-  width: 70%;
+.header__item--form {
+  width: 100%;
+  background-color: #fff;
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
-body div {
-  background-color: #020202;
+.header__item--form--input {
+  width: 100%;
+  border: none;
+  line-height: 2em;
+  color: #030303;
+  padding-left: .5em;
 }
 
-.container {
+.header__item--form--button {
+  background-color: transparent;
+  border: none;
+  line-height: 2em;
+  padding-right: .5em;
+  padding-left: .5em;
+  border-left: thin solid #ddd;
+}
+
+.main__copy {
+  text-align: center;
   margin-bottom: 1em;
+  padding-right: .5em;
+  padding-left: .5em;
 }
 
-.container .item {
-  margin: 0.5em;
+.main__copy--title {
+  font-weight: 100;
+  margin-bottom: 0.5em;
+}
+
+.main__copy--description {
+  font-size: .9em;
+  line-height: 1.25em;
+}
+
+.planetario {
+  width: 75%;
+  font-family: Helvetica, sans-serif;
+  margin: auto;
+}
+
+.planetario__item {
+  border-bottom: 1px solid #ccc;
+  line-height: 2.5em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.planetario__item--nombre {
+  text-transform: uppercase;
 }
