--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,11 @@
 /*
-* Variables
+* #VARIABLES
+*/
+/*
+* #MIXINS
+*/
+/*
+* #BASE
 */
 * {
   margin: 0;
@@ -8,19 +14,27 @@
 }
 
 html {
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-family: Helvetica, "Helvetica Neue", Arial, sans-serif;
 }
 
 body {
   background-color: #000;
   color: #fff;
-  max-width: 400px;
-  margin: 0 auto;
+  max-width: 960px;
 }
 
-.header {
+@media screen and (min-width: 960px) {
+  body {
+    margin: auto;
+  }
+}
+
+/*
+* #SITE LAYOUT
+*/
+.main-header {
   width: 100%;
-  margin-bottom: 1em;
+  margin-bottom: 1.5em;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -32,21 +46,23 @@ body {
           align-items: center;
 }
 
-.header__form {
-  width: 90%;
+@media screen and (min-width: 640px) {
+  .main-header {
+    margin-bottom: 2em;
+  }
 }
 
-.header__item {
+.main-nav {
   margin: 0.5em;
 }
 
-.header__item--menu {
+.main-menu {
   color: #fff;
   text-decoration: none;
 }
 
-.header__item--form {
-  width: 100%;
+.main-form {
+  width: 90%;
   background-color: #fff;
   height: auto;
   display: -webkit-box;
@@ -58,67 +74,128 @@ body {
   border-radius: 2px;
   padding-right: 2px;
   padding-left: 2px;
+  margin: 0.5em;
 }
 
-.header__item--form--input {
+@media screen and (min-width: 640px) {
+  .main-form {
+    background-color: rgba(255, 255, 255, 0.1);
+    border-radius: 4px;
+  }
+}
+
+.main-form--input {
   width: 100%;
   border: none;
-  line-height: 2em;
+  line-height: 2;
   color: #030303;
   padding-left: .5em;
+  background-color: transparent;
 }
 
-.header__item--form--input:focus {
+@media screen and (min-width: 640px) {
+  .main-form--input {
+    color: #fff;
+    line-height: 2.5;
+    font-size: 1.2em;
+  }
+}
+
+.main-form--input:focus {
   outline: none;
 }
 
-.header__item--form--button {
+.main-form--button {
   background-color: transparent;
   border: none;
-  line-height: 2em;
+  line-height: 2;
   padding-right: .5em;
   padding-left: .5em;
   border-left: thin solid #ddd;
 }
 
-.header__item--form--button:focus {
+@media screen and (min-width: 640px) {
+  .main-form--button {
+    color: #fff;
+    line-height: 2.5;
+    font-size: 1.2em;
+    border: none;
+    cursor: pointer;
+  }
+}
+
+.main-form--button:focus {
   outline: none;
 }
 
-.main__copy {
+.banner {
   text-align: center;
-  margin-bottom: 1em;
+  margin-bottom: 1.5em;
+  padding-right: .5em;
+  padding-left: .5em;
+  color: #e8e8e8;
+}
+
+@media screen and (min-width: 640px) {
+  .banner {
+    margin-bottom: 2em;
+  }
+}
+
+.banner--title {
+  font-weight: 100;
+  font-size: 1.5em;
+  margin-bottom: 0.5em;
+}
+
+@media screen and (min-width: 640px) {
+  .banner--title {
+    font-size: 2em;
+  }
+}
+
+.banner--description {
+  font-size: .9em;
+  line-height: 1.25em;
   padding-right: .5em;
   padding-left: .5em;
 }
 
-.main__copy--title {
-  font-weight: 100;
-  margin-bottom: 0.5em;
+@media screen and (min-width: 640px) {
+  .banner--description {
+    font-size: 1.2em;
+    color: #bbb;
+  }
 }
 
-.main__copy--description {
-  font-size: .9em;
-  line-height: 1.25em;
-}
-
-.planetario {
-  width: 75%;
-  font-family: Helvetica, sans-serif;
+.main-content {
+  width: 100%;
   margin: auto;
+  padding-right: .5em;
+  padding-left: .5em;
 }
 
-.planetario__item {
-  border-bottom: 1px solid #ccc;
-  line-height: 2.5em;
+.main-content__item {
+  background-color: #141414;
+  line-height: 3em;
+  border-radius: 2px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  margin-bottom: .5em;
+  padding-right: .5em;
+  padding-left: .5em;
+  font-weight: 100;
+  color: cadetblue;
 }
 
-.planetario__item--nombre {
+.main-content__item--name {
   text-transform: uppercase;
+}
+
+.main-content__item--weight {
+  font-size: 1.2em;
 }
