--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,120 +1,198 @@
 /*
-* Variables
+* #VARIABLES
 */
 
-// Colors
+// Colors Palette
 $primary-color: #fff;
-$secondary-color: #0ff;
+$secondary-color: cadetblue;
 $bg-color: #000;
 
 // Gutter
-$maxW: 400px;
+$maxW: 960px; //Tablet
 $gap: .5em;
 
-// Basic Reset
+//BreakPoints
+$small: 420px;
+$medium: 640px;
+$large: 980px;
+
+
+/*
+* #MIXINS
+*/
+
+@mixin desde($size){
+  @media screen and (min-width: $size){
+    @content;
+  }
+}
+
+/*
+* #BASE
+*/
+
+// Reset
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
+
 html{
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-family: Helvetica, "Helvetica Neue", Arial, sans-serif;
 }
 
 body{
   background-color: $bg-color;
   color: $primary-color;
   max-width: $maxW;
-  margin: 0 auto; //Comentado para desarrollo
+  @include desde($maxW){
+    margin: auto;
+  }
 }
 
-.header{
-  width: 100%;
-  margin-bottom: $gap * 2;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+/*
+* #SITE LAYOUT
+*/
 
-  &__form{
-    width: 90%;
+// HEADER
+.main{
+  &-header{
+    width: 100%;
+    margin-bottom: $gap * 3;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    @include desde($medium){
+      margin-bottom: $gap * 4;
+    }
   }
 
-  &__item{
+  // Nav
+  &-nav{
     margin: $gap;
+  }
 
+  &-menu{
     // Menú ejemplo http://codepen.io/Ju4ni/pen/PZBJNw
-    &--menu{
-      color: $primary-color;
-      text-decoration: none;
+    color: $primary-color;
+    text-decoration: none;
+  }
+
+  // Form
+  &-form{
+    width: 90%;
+    background-color: #fff;
+    height: auto;
+    display: flex;
+    justify-content: space-between;
+    border-radius: 2px;
+    padding-right: 2px;
+    padding-left: 2px;
+    margin: $gap;
+    @include desde($medium){
+      background-color: rgba(#fff, .1);
+      border-radius: 4px;
     }
 
-    &--form{
+    &--input{
       width: 100%;
-      background-color: #fff;
-      height: auto;
-      display: flex;
-      justify-content: space-between;
-      border-radius: 2px;
-      padding-right: 2px;
-      padding-left: 2px;
-
-      &--input{
-        width: 100%;
-        border: none;
-        line-height: 2em;
-        color: lighten(#000, 1);
-        padding-left: .5em;
-
-        &:focus{
-          outline: none;
-        }
+      border: none;
+      line-height: 2;
+      color: lighten(#000, 1);
+      padding-left: .5em;
+      background-color: transparent;
+      @include desde($medium){
+        color: #fff;
+        line-height: 2.5;
+        font-size: 1.2em;
       }
 
-      &--button{
-        background-color: transparent;
-        border: none;
-        line-height: 2em;
-        padding-right: .5em;
-        padding-left: .5em;
-        border-left: thin solid #ddd;
+      &:focus{
+        outline: none;
+      }
+    }
 
-        &:focus{
-          outline: none;
-        }
+    &--button{
+      background-color: transparent;
+      border: none;
+      line-height: 2;
+      padding-right: .5em;
+      padding-left: .5em;
+      border-left: thin solid #ddd;
+      @include desde($medium){
+        color: #fff;
+        line-height: 2.5;
+        font-size: 1.2em;
+        border:none;
+        cursor: pointer;
+      }
+
+      &:focus{
+        outline: none;
       }
     }
   }
 }
 
-.main__copy{
+
+// BANNER
+.banner{
   text-align: center;
-  margin-bottom: $gap * 2;
+  margin-bottom: $gap * 3;
   padding-right: .5em;
   padding-left: .5em;
+  color: darken(#fff, 9);
+  @include desde($medium){
+    margin-bottom: $gap * 4;
+  }
 
   &--title{
     font-weight: 100;
+    font-size: 1.5em;
     margin-bottom: $gap;
+    @include desde($medium){
+      font-size: 2em;
+    }
   }
+
   &--description{
     font-size: .9em;
     line-height: 1.25em;
+    padding-right: .5em;
+    padding-left: .5em;
+    @include desde($medium){
+      font-size: 1.2em;
+      color: #bbb;
+    }
   }
 }
 
-.planetario{
-  width: 75%;
-  font-family: Helvetica, sans-serif;
+// Content
+.main-content{
+  width:100%;
   margin: auto;
+  padding-right: .5em;
+  padding-left: .5em;
 
   &__item{
-  border-bottom: 1px solid #ccc;
-  line-height: 2.5em;
+  background-color: lighten(#000, 8);
+  line-height: 3em;
+  border-radius: 2px;
   display: flex;
   justify-content: space-between;
+  margin-bottom: .5em;
+  padding-right: .5em;
+  padding-left: .5em;
+  font-weight: 100;
+  color: $secondary-color;
 
-    &--nombre{
+    &--name{
       text-transform: uppercase;
+    }
+
+    &--weight{
+      font-size: 1.2em;
     }
   }
 }
