Se agrego un fondo estrellado Ademas, se agrego la imagen de hamburguesa ☰  al HTML por que desde el movil no cargaba el código

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,9 +18,13 @@ html {
 }
 
 body {
-  background-color: #000;
   color: #fff;
   max-width: 960px;
+  background-color: #000;
+  background-image: -webkit-radial-gradient(white, rgba(255, 255, 255, 0.2) 2px, transparent 40px), -webkit-radial-gradient(white, rgba(255, 255, 255, 0.15) 1px, transparent 30px), -webkit-radial-gradient(white, rgba(255, 255, 255, 0.1) 2px, transparent 40px), -webkit-radial-gradient(rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.1) 2px, transparent 30px);
+  background-image: radial-gradient(white, rgba(255, 255, 255, 0.2) 2px, transparent 40px), radial-gradient(white, rgba(255, 255, 255, 0.15) 1px, transparent 30px), radial-gradient(white, rgba(255, 255, 255, 0.1) 2px, transparent 40px), radial-gradient(rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.1) 2px, transparent 30px);
+  background-size: 550px 550px, 350px 350px, 250px 250px, 150px 150px;
+  background-position: 0 0, 40px 60px, 130px 270px, 70px 100px;
 }
 
 @media screen and (min-width: 960px) {
@@ -79,7 +83,7 @@ body {
 
 @media screen and (min-width: 640px) {
   .main-form {
-    background-color: rgba(255, 255, 255, 0.1);
+    background-color: #141414;
     border-radius: 4px;
   }
 }
@@ -176,7 +180,7 @@ body {
 }
 
 .main-content__item {
-  background-color: #141414;
+  background-color: #0f0f0f;
   line-height: 3em;
   border-radius: 2px;
   display: -webkit-box;
