--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -43,9 +43,17 @@ html{
 }
 
 body{
-  background-color: $bg-color;
   color: $primary-color;
   max-width: $maxW;
+  // From http://lea.verou.me/css3patterns/#starry-night
+  background-color: $bg-color;
+  background-image:
+    radial-gradient(white, rgba(255,255,255,.2) 2px, transparent 40px),
+    radial-gradient(white, rgba(255,255,255,.15) 1px, transparent 30px),
+    radial-gradient(white, rgba(255,255,255,.1) 2px, transparent 40px),
+    radial-gradient(rgba(255,255,255,.4), rgba(255,255,255,.1) 2px, transparent 30px);
+  background-size: 550px 550px, 350px 350px, 250px 250px, 150px 150px;
+  background-position: 0 0, 40px 60px, 130px 270px, 70px 100px;
   @include desde($maxW){
     margin: auto;
   }
@@ -91,7 +99,7 @@ body{
     padding-left: 2px;
     margin: $gap;
     @include desde($medium){
-      background-color: rgba(#fff, .1);
+      background-color:  lighten(#000, 8);
       border-radius: 4px;
     }
 
@@ -176,7 +184,7 @@ body{
   padding-left: .5em;
 
   &__item{
-  background-color: lighten(#000, 8);
+  background-color: lighten(#000, 6);
   line-height: 3em;
   border-radius: 2px;
   display: flex;
