Se cambio icono de hamburguesa para mobile

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -85,6 +85,8 @@ body{
     // Menú ejemplo http://codepen.io/Ju4ni/pen/PZBJNw
     color: $primary-color;
     text-decoration: none;
+    font-size: 2em;
+    font-weight: 100;
   }
 
   // Form
