--- a/css/styles.css
+++ b/css/styles.css
@@ -61,10 +61,18 @@ body {
 }
 
 .main-menu {
-  color: #fff;
-  text-decoration: none;
-  font-size: 2em;
-  font-weight: 100;
+  background-color: #fff;
+  color: #000;
+  width: 50%;
+  margin-left: -100%;
+  height: 100vh;
+  -webkit-transition: all .9s ease;
+  transition: all .9s ease;
+  position: fixed;
+}
+
+.main-menu.active {
+  margin-left: 0;
 }
 
 .main-form {
@@ -132,6 +140,14 @@ body {
 
 .main-form--button:focus {
   outline: none;
+}
+
+.toggle-menu {
+  color: #fff;
+  font-size: 2em;
+  font-weight: 100;
+  cursor: pointer;
+  position: relative;
 }
 
 .banner {
