--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*
 * #VARIABLES
 */
@@ -63,16 +64,80 @@ body {
 .main-menu {
   background-color: #fff;
   color: #000;
-  width: 50%;
-  margin-left: -100%;
+  width: 70%;
   height: 100vh;
-  -webkit-transition: all .9s ease;
-  transition: all .9s ease;
-  position: fixed;
+  -webkit-transition: all 1s ease;
+  transition: all 1s ease;
+  position: absolute;
+  left: -100%;
+  top: 0;
+  z-index: 10;
+}
+
+@media screen and (min-width: 640px) {
+  .main-menu {
+    width: 50%;
+  }
+}
+
+@media screen and (min-width: 980px) {
+  .main-menu {
+    width: 30%;
+  }
 }
 
 .main-menu.active {
-  margin-left: 0;
+  left: 0;
+}
+
+.main-menu--disclaimer {
+  margin-top: 5em;
+  margin-right: 0.5em;
+  margin-left: 0.5em;
+  width: 90%;
+}
+
+.main-menu--title {
+  text-transform: uppercase;
+  font-size: .9em;
+  font-weight: 100;
+  padding-bottom: 1em;
+}
+
+.main-menu--content {
+  font-size: .9em;
+  line-height: 1.2;
+  padding-bottom: 1em;
+}
+
+.main-menu--footer {
+  margin-top: 2em;
+}
+
+.main-menu code {
+  display: block;
+  margin-bottom: 1em;
+}
+
+.main-menu--source {
+  padding-top: 2.5em;
+}
+
+.main-menu--sign {
+  padding-left: 2.5em;
+  line-height: 2;
+  height: 2em;
+  position: relative;
+}
+
+.main-menu--sign::before {
+  content: "❤";
+  position: absolute;
+  top: 0;
+  left: 7px;
+  color: red;
+  font-size: 2em;
+  line-height: .5;
 }
 
 .main-form {
@@ -148,6 +213,11 @@ body {
   font-weight: 100;
   cursor: pointer;
   position: relative;
+  z-index: 20;
+}
+
+.toggle-menu.inactive {
+  color: #000;
 }
 
 .banner {
