Se agrego un overflow auto para desborde en eje Y Por que en mobile no se ve bien

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -107,6 +107,7 @@ body{
       margin-right: $gap;
       margin-left: $gap;
       width: 90%;
+      overflow: auto;
     }
     &--title{
       text-transform: uppercase;
