--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -330,7 +330,7 @@ $pluton-color: #805F47;
         // position: absolute;
         // top: 0;
         // left: 0;
-        display: inline-block;
+        display: block;
         width: $base-size;
         height: $base-size;
         border-radius: 100%;
@@ -418,11 +418,3 @@ $pluton-color: #805F47;
     box-shadow: inset -3px -3px darken($pluton-color, 25);
   }
 }
-
-// background-image:
-//     radial-gradient(white, rgba(255,255,255,.2) 2px, transparent 40px),
-//     radial-gradient(white, rgba(255,255,255,.15) 1px, transparent 30px),
-//     radial-gradient(white, rgba(255,255,255,.1) 2px, transparent 40px),
-//     radial-gradient(rgba(255,255,255,.4), rgba(255,255,255,.1) 2px, transparent 30px);
-//   background-size: 550px 550px, 350px 350px, 250px 250px, 150px 150px;
-//   background-position: 0 0, 40px 60px, 130px 270px, 70px 100px;
