Se dibuja el término -Kg- desde CSS. Se saco de js y se agregó como pseudo-elemento en CSS

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -340,8 +340,12 @@ $pluton-color: #805F47;
     }
 
     &--weight{
-      font-size: 1.2em;
+      font-size: 1.4em;
       margin-right: 1em;
+      &::after{
+        content: " Kg";
+        font-size: .8em;
+      }
     }
   }
 }
