--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -85,8 +85,11 @@ body{
     background-color: #fff;
     color: #000;
     width: 70%;
-    height: 100vh;
+    min-height: 100%;
+    // height: 100%;
+    // min-height: 100vh;
     transition: all 1s ease;
+    // position: fixed;
     position: absolute;
     left: -100%;
     top: 0;
@@ -107,7 +110,8 @@ body{
       margin-right: $gap;
       margin-left: $gap;
       width: 90%;
-      overflow: auto;
+      // min-height: 100%;
+      // overflow: auto;
     }
     &--title{
       text-transform: uppercase;
@@ -122,6 +126,7 @@ body{
     }
     &--footer{
       margin-top: 2em;
+      padding-bottom: 2em;
     }
     code{
       display: block;
